[DELIVERS #52626107] Fixes z-index of annotator

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -1150,7 +1150,7 @@ parts {
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 20;
+	z-index: 40;
 	&:before {
 		content: "";
 		border: 17px solid transparent;
